# transmission-rpc

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  REUSE.toml  docker-compose.yaml  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
examples/: .env  bandwidth-group-get.rs  bandwidth-group-set.rs  blocklist-update.rs  free-space.rs  get_session.rs  port-test.rs  queue-move.rs  session-close.rs  session-get.rs  session-stats.rs  torrent-action.rs  torrent-add.rs  torrent-get.rs  torrent-remove.rs  torrent-rename-path.rs  torrent-set-location.rs
src/: lib.rs  main.rs  sync.rs  types.rs
src/models/: entity.rs  mod.rs  request.rs
src/types/: entity.rs  mod.rs  request.rs  response.rs  tests.rs
src/types/request/: torrent_set.rs
