[package]
name = "transmission-rpc"
version = "0.4.0"
authors = ["red <red.avtovo@gmail.com>", "George Miao <gm@miao.dev>"]
edition = "2021"
repository = "https://github.com/j0rsa/transmission-rpc"
license = "MIT"
readme = "README.md"
description = "Transmission JRPC client"
keywords = ["transmission", "torrent", "jrpc"]
categories = ["api-bindings"]
include = ["**/*.rs", "Cargo.toml"]

[features]
sync = []

[dependencies]
reqwest = { version = "0.11.11", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.144", features = ["derive"] }
serde_repr = "0.1"
enum-iterator = "1.2.0"

log = "0.4.17"

[dev-dependencies]
env_logger = "0.9.1"
dotenvy = "0.15.5"
tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread"] }
