[package]
name = "transmission-rpc"
version = "0.4.2"
authors = ["red <red.avtovo@gmail.com>"]
edition = "2021"
repository = "https://github.com/j0rsa/transmission-rpc"
license = "MIT"
readme = "README.md"
description = "Transmission JRPC client"
keywords = ["transmission", "torrent", "jrpc"]
categories = ["api-bindings"]
include = ["**/*.rs", "Cargo.toml"]

[features]
sync = []

[dependencies]
reqwest = { version = "0.12.3", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.190", features = ["derive"] }
serde_repr = "0.1.17"
enum-iterator = "1.4.1"
chrono = {version = "0.4.31", features = ["serde"] }

log = "0.4.20"

[dev-dependencies]
env_logger = "0.10.0"
dotenvy = "0.15.7"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
