[package]
name = "transmission-rpc"
version = "0.5.0"
authors = ["red <red.avtovo@gmail.com>"]
edition = "2021"
repository = "https://github.com/j0rsa/transmission-rpc"
license = "MIT"
readme = "README.md"
description = "Transmission JRPC client"
keywords = ["transmission", "torrent", "jrpc"]
categories = ["api-bindings"]
include = ["**/*.rs", "Cargo.toml"]

[features]
sync = []

[dependencies]
reqwest = { version = "0.12.5", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1.17"
serde_with = "3.12.0"
enum-iterator = "2.1.0"
chrono = {version = "0.4.39", features = ["serde"] }

log = "0.4.25"
base64 = "0.22.1"

[dev-dependencies]
env_logger = "0.11.3"
dotenvy = "0.15.7"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
